--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "type": "module",
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tsconfig/svelte": "^5.0.2",
+    "svelte": "^4.2.8",
+    "svelte-check": "^3.6.2",
+    "svelte-preprocess": "^5.1.1",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3",
     "vite": "^5.0.6",
     "vite-plugin-full-reload": "^1.1.0",
     "vite-plugin-ruby": "^5.0.0"
