feat: add packages for JS

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "vite": "^5.0.6",
     "vite-plugin-full-reload": "^1.1.0",
     "vite-plugin-ruby": "^5.0.0"
+  },
+  "dependencies": {
+    "sortablejs": "^1.15.1"
   }
 }
